<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">幻幻</string>

    <string name="umeng_update_content">版本号：6.4.5\n1.更新了QQ精简版与完整版支持轻聊\n2.更新了新浪SDK，修复了授权在部分rom上不能唤起客户端的bug\n3.有道云笔记更新为官方SDK</string>
    <string name="umeng_home_title">U-Share产品Demo</string>
    <string name="umeng_home_update">新版更新内容</string>
    <string name="umeng_share_title">分享</string>
    <string name="umeng_auth_title">授权</string>
    <string name="umeng_delauth_title">删除授权</string>
    <string name="umeng_getinfo_title">获取用户信息</string>
    <string name="umeng_check_title">自检工具</string>
    <string name="umeng_menu_title">分享菜单模板</string>

    <string name="umeng_check_sign">检查签名</string>
    <string name="umeng_check_sina">检查新浪</string>
    <string name="umeng_check_wx">检查微信</string>
    <string name="umeng_check_alipay">检查支付宝</string>
    <string name="umeng_check_qq">检查qq</string>
    <string name="umeng_check_fb">检查facebook</string>
    <string name="umeng_check_vk">vkontakte</string>
    <string name="umeng_choose_style">选择分享类型</string>

    <string name="umeng_sharebutton_copy">复制文本</string>
    <string name="umeng_sharebutton_copyurl">复制连接</string>

    <string name="sys_network_error">请检查网络连接是否正常</string>
    <string name="sys_exit_tip">再按一次退出程序</string>

    <string name="register">立即注册</string>
    <string name="login">登录</string>
    <string name="phoneNumber">手机号</string>
    <string name="password">密码</string>
    <string name="forgetPassword">忘记密码？</string>

    <string name="register1Title">注册（1/2）</string>
    <string name="register2Title">注册（2/2）</string>
    <string name="service_agree"><u>用户服务协议</u></string>
    <string name="nextTips">点击「下一步」代表你已阅读并同意</string>
    <string name="existAccounts">已有账号？</string>
    <string name="existLogin"><u>立即登录</u></string>
    <string name="nextStep">下一步</string>
    <string name="verifyMsg1">短信验证码已发送至</string>
    <string name="verifyMsg2">请注意查收</string>
    <string name="enterVerifyCode">请输入验证码</string>
    <string name="returnGet">重新获取</string>
    <string name="registerFinish">完成</string>

    <string name="resetPassword1">重设密码（1/3）</string>
    <string name="resetPassword2">重设密码（2/3）</string>
    <string name="resetPassword3">重设密码（3/3）</string>
    <string name="sendVerifyCode">发送验证码</string>

    <string name="userAgreement">用户服务协议</string>
    <string name="publish">发布</string>
    <string name="viewAllExchange">查看全部</string>

    <string name="allExchange">全部兑换</string>
    <string name="publish_exchange">发布兑换</string>
    <string name="publish_exchange_text">开启我的二次元生活</string>
    <string name="publish_coop">发布合作</string>
    <string name="publish_coop_text">漫展，COS活动点我吧</string>
    <string name="cancel">取消</string>
    <string name="publishExchange">发布兑换</string>
    <string name="confirmPublish">确认发布</string>
    <string name="cosHint">COS作品标题</string>
    <string name="cosAuthorHint">请输入物品原作</string>
    <string name="cosRoleHint">请输入物品角色</string>
    <string name="cosContainHint">物品包含（如服装，鞋子，配饰等）</string>
    <string name="cosFromHint">物品来源(如淘宝等)</string>
    <string name="priceUnit">元</string>
    <string name="detail_describe">请填写详细描述</string>
    <string name="exchange_upload_Page">上传封面图片</string>
    <string name="coop_cosTitle">合作主题名称</string>
    <string name="tv_coop_chooseAddress">选择地址（省市区）</string>
    <string name="coop_full_address">请输入详细地址</string>
    <string name="coop_request">请输入需求（如妆娘、摄影、后期等）</string>
    <string name="coop_activity_time">活动时间</string>
    <string name="coop_setPersonsNum">设置人数</string>
    <string name="coop_price">物品价格</string>
    <string name="personUnit">人</string>
    <string name="publishCoop">发布合作</string>
    <string name="_3_9">上传3至9张图片</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cooperate">合作</string>
    <string name="position">地点</string>
    <string name="request">需求</string>
    <string name="time">时间</string>
    <string name="chatting">立即沟通</string>
    <string name="selectCfu">挑选C服</string>
    <string name="join">参加</string>
    <string name="coop_titleBar">合作详情</string>
    <string name="exchange_titleBar">产品详情</string>
    <string name="commentText">评论</string>

    <string name="confirmExchange">确认兑换</string>
    <string name="createAddress">创建地址</string>
    <string name="consignee">收货人:</string>
    <string name="exchange_ways">兑换方式</string>
    <string name="personValue_exchange">身家兑换</string>
    <string name="expense">运费</string>
    <string name="finalValue">最终值</string>
    <string name="singn_borrow">单次租赁</string>
    <string name="totalPrice">合计:</string>
    <string name="consignee_text">收货人</string>
    <string name="hint_consignee">请输入收货人姓名</string>
    <string name="contact_phone">联系电话</string>
    <string name="consignee_phone">请输入收货人手机号</string>
    <string name="at_local">所在地区</string>
    <string name="choose_address">选择省市区</string>
    <string name="set_isDefault">设为默认</string>
    <string name="add_new_address">新增地址</string>
    <string name="save">保存</string>
    <string name="manage">管理</string>
    <string name="addressManage">地址管理</string>
    <string name="chooseAddress">选择收货地址</string>
    <string name="editAddress">编辑地址</string>
    <string name="comfrim">确定</string>
    <string name="personal">我的</string>
    <string name="login_register">登录/注册</string>
    <string name="person_value">我的身家</string>
    <string name="person_vip">我的会员</string>
    <string name="person_money">我的押金</string>
    <string name="person_publish">我的发布</string>
    <string name="person_exchange">租赁与兑换</string>
    <string name="personal_data">个人资料</string>
    <string name="edit_nickName">修改昵称</string>
    <string name="edit_personDesc">个性签名</string>
    <string name="setting">设置</string>
    <string name="add">添加</string>
    <string name="aboutUs">关于我们</string>
    <string name="delivery_address">收货地址</string>
    <string name="send_address">发货地址</string>
    <string name="account_security">账户安全</string>
    <string name="clear_cache">清除缓存</string>
    <string name="login_out">退出账号</string>
    <string name="exchange_alipay">更换支付宝</string>
    <string name="exchange_phone">更换手机号</string>
    <string name="bind_alipay">绑定支付宝</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="recharge">立即充值</string>
    <string name="moneyRecharge">金额充值</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="return_deposit">申请退还</string>
    <string name="person_deposit">我的押金</string>
    <string name="tracking_no">物流单号</string>
    <string name="tracking_msg">物流信息</string>
    <string name="my_exchange">我的兑换</string>
    <string name="message">消息</string>
    <string name="system_message">系统消息</string>
    <string name="confirm_borrow">确认租借</string>
    <string name="all">全部</string>
    <string name="my_borrow">我的租赁</string>
    <string name="return_exchange">退还兑换</string>
    <string name="sendgoods">立即发货</string>
    <string name="person_coupon">我的优惠券</string>
    <string name="pass_disabled">过期无效，请及时使用</string>
    <string name="add_coupon">添加优惠券</string>
    <string name="card_borrow">兑换券租赁</string>
    <string name="crashExit">系统崩溃了</string>
</resources>
