<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.cos.huanhuan.activitys.ResetActivitySecond">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@color/sendMsgColor"
        android:gravity="center_vertical|center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifyMsg1"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tv_reset2_sendPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+8613357131615"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifyMsg2"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            >

            <EditText
                android:id="@+id/et_reset2_code"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="bottom"
                android:hint="@string/enterVerifyCode"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="15px"
                android:textSize="@dimen/phone_text_size" />

            <TextView
                android:id="@+id/tv_reset2_getCode"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="right|bottom"
                android:background="@null"
                android:text="@string/returnGet"
                android:textSize="14dp"
                android:gravity="center_vertical|right"
                android:enabled="false"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividLineXML"/>
        <Button
            android:id="@+id/btn_reset2_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_corner_dark"
            android:layout_marginTop="50dp"
            android:text="@string/nextStep"
            android:textSize="18dp"
            android:textColor="@color/white"
            />
    </LinearLayout>
</LinearLayout>
