<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cos.huanhuan.activitys.AddNewAddressActivity"
    android:background="@color/addAddressBack"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/consignee_text"
            android:textColor="@color/phone_text"
            android:textSize="@dimen/phone_text_size" />

        <EditText
            android:id="@+id/et_addAddress_consignee"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/hint_consignee"
            android:paddingLeft="15px"
            android:textSize="@dimen/phone_text_size" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividLineXML"
        ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/contact_phone"
            android:textColor="@color/phone_text"
            android:textSize="@dimen/phone_text_size" />

        <EditText
            android:id="@+id/et_addAddress_phone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/consignee_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="15px"
            android:textSize="@dimen/phone_text_size" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividLineXML"
        ></View>
    <RelativeLayout
        android:id="@+id/rl_choose_local"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/at_local"
            android:textColor="@color/phone_text"
            android:textSize="@dimen/phone_text_size" />
        <TextView
            android:id="@+id/tv_address_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/choose_address"
            android:textSize="@dimen/action_text_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/iv_exchange_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/back_grey"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividLineXML"
        ></View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <EditText
            android:id="@+id/et_address_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|left"
            android:background="@drawable/input_area"
            android:layout_marginTop="5dp"
            android:hint="@string/coop_full_address"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividLineXML"
        ></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="15dp"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|left"
            android:text="@string/set_isDefault"
            android:textColor="@color/phone_text"
            android:textSize="@dimen/phone_text_size" />
        <ImageButton
            android:id="@+id/ib_choose_isDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_off"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividLineXML"
        ></View>
</LinearLayout>
