<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cos.huanhuan.activitys.PublishExchangeActivity"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:scrollbars="none"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="35dp"
        android:focusableInTouchMode="true"
        >

        <EditText
            android:id="@+id/et_coop_cosTitle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/coop_cosTitle"
            android:paddingLeft="15px"
            android:textColorHint="#FF999999"
            android:textSize="@dimen/text_size_medium"
            android:maxLines="1"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividLineXML"
            ></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:id="@+id/ll_publishCoop_Address"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tv_coop_chooseAddress"
                android:gravity="center_vertical"
                android:textSize="@dimen/phone_text_size"
                android:textColor="@color/popPublishColor"
                android:paddingLeft="15px"
                android:layout_weight="6"
                />

            <TextView
                android:id="@+id/tv_publishCoop_cosCoop"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="6"
                android:duplicateParentState="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="2dp"
                android:textSize="@dimen/phone_text_size" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/exchange_pull"
                android:scaleType="centerInside"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividLineXML"
            ></View>

        <EditText
            android:id="@+id/et_publishCoop_cosAddressDetail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/coop_full_address"
            android:paddingLeft="15px"
            android:textSize="@dimen/phone_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividLineXML"
            ></View>
        <EditText
            android:id="@+id/et_publish_cosRequest"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/coop_request"
            android:paddingLeft="15px"
            android:textSize="@dimen/phone_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividLineXML"
            ></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:id="@+id/ll_publishCoop_time"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/coop_activity_time"
                android:gravity="center_vertical"
                android:textSize="@dimen/phone_text_size"
                android:textColor="@color/popPublishColor"
                android:paddingLeft="15px"
                android:layout_weight="2.5"
                />

            <TextView
                android:id="@+id/tv_publishCoop_cosTime"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="6"
                android:paddingLeft="10dp"
                android:paddingRight="2dp"
                android:gravity="center_vertical|right"
                android:textSize="@dimen/phone_text_size"
                android:duplicateParentState="true"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@mipmap/exchange_pull"
                android:scaleType="centerInside"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividLineXML"
            ></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:id="@+id/ll_coop_personNums"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/coop_setPersonsNum"
                android:gravity="center_vertical"
                android:textSize="@dimen/phone_text_size"
                android:textColor="@color/popPublishColor"
                android:paddingLeft="15px"
                android:layout_weight="2.5"
                />

            <EditText
                android:id="@+id/et_publishCoop_cosPersonNums"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="6"
                android:background="@null"
                android:gravity="center_vertical|right"
                android:hint="0"
                android:paddingLeft="10dp"
                android:paddingRight="2dp"
                android:inputType="number"
                android:textSize="@dimen/phone_text_size"
                android:textColorHint="@color/titleBarTextColor"
                android:textColor="@color/titleBarTextColor"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/personUnit"
                android:gravity="center_vertical"
                android:textSize="@dimen/phone_text_size"
                android:textColor="@color/popPublishColor"
                android:paddingLeft="15px"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividLineXML"
            ></View>
        <EditText
            android:id="@+id/et_publishCoop_cosDetailDesc"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="top"
            android:background="@drawable/input_area"
            android:layout_marginTop="5dp"
            android:hint="@string/detail_describe"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividLineXML"
            ></View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchange_upload_Page"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/phone_text_size"
            />
        <ImageView
            android:id="@+id/coop_select_img_page"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@mipmap/img_add"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="2dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_9"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/phone_text_size"
            />
        <com.cos.huanhuan.views.MyGridView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/gridView_coop"
            android:layout_marginTop="5dp"
            android:numColumns="4"
            android:horizontalSpacing="5dp"
            android:verticalSpacing="5dp"
            ></com.cos.huanhuan.views.MyGridView>
    </LinearLayout>
</ScrollView>
