<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    tools:context="com.cos.huanhuan.activitys.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <EditText
            android:id="@+id/et_register_phone"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:hint="请输入手机号"
            android:paddingLeft="15px"
            android:textSize="@dimen/phone_text_size"
            android:background="@null"
            android:inputType="phone"
            android:maxLength="11"
            android:gravity="bottom"
            />
        <LinearLayout
            android:id="@+id/ll_register_clearPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|right"
            android:layout_marginBottom="5dp"
            >
            <ImageView
                android:id="@+id/iv_register_clearPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/close_dark"
                android:layout_gravity="bottom"
                android:visibility="gone"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividLineXML"
        ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:hint="请输入密码"
            android:paddingLeft="15px"
            android:textSize="@dimen/phone_text_size"
            android:background="@null"
            android:inputType="textPassword"
            android:gravity="bottom"
            />
        <LinearLayout
            android:id="@+id/ll_register_showPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|right"
            >
            <ImageView
                android:id="@+id/iv_register_showPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/key_light"
                android:layout_gravity="bottom"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividLineXML"
        ></View>
    <Button
        android:id="@+id/btn_register_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_corner_dark"
        android:layout_marginTop="50dp"
        android:text="@string/nextStep"
        android:textSize="18dp"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/existAccounts"
            android:textColor="@color/forgetPassText"
            android:textSize="@dimen/forgetTextSize"
            />
        <TextView
            android:id="@+id/tv_accessLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/existLogin"
            android:textColor="@color/titleBarTextColor"
            android:textSize="@dimen/forgetTextSize"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal|bottom"
        android:layout_weight="1"
        android:layout_marginBottom="40dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextTips"
            />
        <TextView
            android:id="@+id/tv_serviceAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_agree"
            android:textColor="@color/titleBarTextColor"
            android:autoLink="all"
            />
    </LinearLayout>
</LinearLayout>
